test/chainsaw/authpolicy/accepted_resources/authpolicy.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  allowedAudiences:
    - value: entraid_server
  oAuthCredentials:
    clientIDKey: CLIENT_ID
    clientSecretKey: CLIENT_SECRET
    secretRef: oauth-secret
  autoLogin:
    enabled: true
    scopes:
      - openid
  acceptedResources:
    - https://example.com/api-1
    - https://example.com/api-2
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
