test/chainsaw/authpolicy/accepted_resources/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: accepted-resources
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: ../../../resources/skiperator/application-with-istio-mount.yaml
        - apply:
            file: ../../../resources/ingress/wildcard-ingress.yaml
        - create:
            file: ../../../resources/secret/oauth-secret.yaml
        - create:
            file: authpolicy.yaml
        - script:
            content: sleep 14
        - script:
            content: |
              hurl --error-format long \
              --insecure --test tests.hurl \
              --variable location_header="http://mock-oauth2.auth:8080/entraid/authorize?client_id=entraid_server&code_challenge="
